Explicitly check for softwareUpdateZip num in HfsSystemFilesManager#materialize
Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>